@@ -1,0 +1,6 @@
+/* { dg-do run } */
+/* { dg-data {c*} {0x10 0x20 0x30 0x40  0x50 0x60 0x70 0x80   0x90 0xa0 0xb0 0xc0} } */
+
+/* { dg-command { .sub #0,0x2,0x5 } } */
+/* { dg-command { iohandler (1) } } */
+/* { dg-output "sub://0/0x2/0x5/" } */
